<resources>
    <string name="app_name">Currency Converter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_sum_edit_text">Введите\nсумму</string>
    <string name="place_summ_edit_text">Здусь будет\nрезультат</string>
    <string name="image_arrow_two_side">Картинка двусторонней стрелки</string>
    <string name="choice_currency">Выберите валюту</string>
    <string name="change_currency">Изменить\n валюту</string>
    <string name="menu_item_exit">Отмена</string>
    <string name="network_error">Ошбка загрузки данных</string>
</resources>